[gd_scene load_steps=7 format=2]

[ext_resource path="res://ItemListEntry.gd" type="Script" id=1]
[ext_resource path="res://FontSize16.tres" type="DynamicFont" id=2]
[ext_resource path="res://FontSize14.tres" type="DynamicFont" id=3]
[ext_resource path="res://ItemInfoWindow.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tooltip.gd" type="Script" id=6]

[sub_resource type="StyleBoxLine" id=1]
grow_begin = 13.0

[node name="ItemListEntry" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 60.0
rect_min_size = Vector2( 900, 60 )
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1019.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainButton" type="Button" parent="HBoxContainer"]
margin_right = 1019.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="VB1" type="HBoxContainer" parent="HBoxContainer/MainButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_right = -10.0
custom_constants/separation = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB2" type="VBoxContainer" parent="HBoxContainer/MainButton/VB1"]
margin_right = 624.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="lblName" type="Label" parent="HBoxContainer/MainButton/VB1/VB2"]
margin_right = 624.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "The Destructor of Worlds"
valign = 1

[node name="lvlValues" type="Label" parent="HBoxContainer/MainButton/VB1/VB2"]
margin_top = 34.0
margin_right = 624.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
text = "Minor Uncommen Weapon"

[node name="VB3" type="VBoxContainer" parent="HBoxContainer/MainButton/VB1"]
margin_left = 648.0
margin_right = 742.0
margin_bottom = 60.0
mouse_filter = 2
alignment = 1

[node name="cbAttunment" type="CheckBox" parent="HBoxContainer/MainButton/VB1/VB3"]
margin_top = 4.0
margin_right = 94.0
margin_bottom = 28.0
mouse_filter = 2
custom_fonts/font = ExtResource( 3 )
button_mask = 0
text = "Attunment"

[node name="cbCursed" type="CheckBox" parent="HBoxContainer/MainButton/VB1/VB3"]
margin_top = 32.0
margin_right = 94.0
margin_bottom = 56.0
mouse_filter = 2
custom_fonts/font = ExtResource( 3 )
button_mask = 0
text = "Cursed"

[node name="Control" type="Control" parent="HBoxContainer/MainButton/VB1"]
margin_left = 766.0
margin_right = 776.0
margin_bottom = 60.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2

[node name="lblPrice" type="Label" parent="HBoxContainer/MainButton/VB1"]
margin_left = 800.0
margin_top = 20.0
margin_right = 890.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = ExtResource( 2 )
text = "50gp"

[node name="lblMyPrice" type="Label" parent="HBoxContainer/MainButton/VB1"]
margin_left = 914.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 40.0
rect_min_size = Vector2( 90, 0 )
custom_fonts/font = ExtResource( 2 )
text = "250000GP"

[node name="Tooltip" type="Node" parent="."]
script = ExtResource( 6 )
visuals_res = ExtResource( 5 )
owner_path = NodePath("../HBoxContainer/MainButton")
values_path = NodePath("..")
delay = 0.3
